# opt-visual-demo

./: .gitignore  CMakeLists.txt  build_web.sh
misc/: simple_server.py
src/: main.cpp  registration.cpp  registration.h
src/Core/: Application.cpp  Application.h  DrawProxy.cpp  DrawProxy.h  Experiment.cpp  Experiment.h  Helpers.cpp  Helpers.h  ObjectAccessor.h  Optimizer.h  PhysicsWrapper.cpp  PhysicsWrapper.h  Stage.cpp  Stage.h  TinyVM.cpp  TinyVM.h
src/Experiments/: BallDrop2D.cpp  BallDrop2D.h  CircleModel2D.cpp  CircleModel2D.h  Clustering2D.cpp  Clustering2D.h  Fourier2D.cpp  Fourier2D.h  LinearModel2D.cpp  LinearModel2D.h  Logistic2D.cpp  Logistic2D.h  NumPower.cpp  NumPower.h  Triangle2D.cpp  Triangle2D.h
src/Optimizers/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
